[package]
name = "tmux-menu"
version = "0.1.0"
edition = "2021"
author = ["Ja-sonYun <killa30867@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
ctrlc = "3.2.4"
libc = "0.2.139"
nix = "0.26.1"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
