[package]
name = "tmux-menu"
version = "0.1.3"
edition = "2021"
author = ["Ja-sonYun <killa30867@gmail.com>"]

description = "Easy configuration of tmux display-menu with yaml"
repository = "https://github.com/Ja-sonYun/tmux-easy-menu"
license = "MIT"
readme = "README.md"

exclude = [
  "examples/*",
]

[badges]
github = { repository = "Ja-sonYun/tmux-easy-menu", workflow = "Rust" }

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
ctrlc = "3.2.4"
libc = "0.2.139"
nix = "0.26.1"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
